@@ -110,6 +110,12 @@ class MainWindow(object):
         for notebook in self.column.values():
             notebook.change_font(font, size)
 
+    def delete_status(self, status_id):
+        js = 'hideStatus(\"%s\")' % status_id
+  
+        for notebook in self.column.values():
+            notebook.exec_js_all_views(js)
+
     def _get_geometry_from_settings(self):
         x = SETTINGS_GEOMETRY.get_int('window-x')
         y = SETTINGS_GEOMETRY.get_int('window-y')
@@ -270,6 +276,10 @@ class FeedNotebook(Gtk.Notebook):
     def change_font(self, font, size):
         for feedview in self.get_children():
             feedview.change_font(font, size)
+
+    def exec_js_all_views(self, js):
+        for feedview in self.get_children():
+            feedview.execute_script(js)
 
 class NotebookTabLabel(Gtk.EventBox):
 
